--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     text-align: center;
     font-family: Arial;
     color: #333;
@@ -6,7 +7,9 @@ body{
     margin: 0;
     padding: 0;
 }
-#cabecera{
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
@@ -30,5 +33,6 @@ body{
     font-size: 20px;
 }
 #post {
+    background: white;
     padding: 1em;
 }
