--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,7 +10,9 @@ body{
 #cabecera #logo{
     width: 20px;
     vertical-align: middle;
-    background: #33A;
+}
+#cabecera {
+    background: #49AFD8;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
